tests/integration/error_handling/graph_consistency/20_document_mid_is_not_unique/test.itest
RUN: %expect_exit 1 %strictdoc export %S | filecheck %s --dump-input=fail
CHECK: error: TraceabilityIndex: the document MID is not unique: ABC0123. All machine identifiers (MID) must be unique values.
